--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,20 @@
-.App {
-  text-align: center;
+.icon{
+    margin-right: 2% !important;
 }
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
+.btn-black {
+    background: transparent;
+    text-transform: capitalize;
+    font-size: 0.8rem !important;
+    color: var(--mainBlack);
+    border-radius: 0 !important;
+    border: 0.1rem solid var(--mainDark) !important;
+  }
+  .btn-black:hover {
+    background: var(--mainDark) !important;
+    color: var(--mainWhite) !important;
+  }
+  .cart-icon {
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: var(--mainYellow);
+  }
